--- a/client/index.css
+++ b/client/index.css
@@ -210,3 +210,102 @@ cursor: pointer;
     transform: rotate(1800deg);
   }
 }
+
+/* Below is the Home page stylings*/
+.home-page{
+  background-color:#bfd9fb;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+.main-content{
+display: flex;
+width: 90%;
+margin: 10px auto;
+padding: 10px 10px;
+flex: 1;
+}
+
+/*-------------------------------------------------------------
+------------------------------CSS styling for the sidebar------------------*/
+
+.app-sidebar{
+  width: 30%;
+  padding: 0px 20px;
+}
+
+/*------------------------------------------------------------------------------------
+----------------------------CSS FOR THE SEARCH COMPONENT Styling-------------------------*/
+.user-search-area{
+  margin-bottom: 20px;
+  position: relative;
+}
+.user-search-text{
+  width: 100%;
+  height: 40px;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 20px;
+  color: #28282B;
+  border: #ddd 1px solid;
+}
+
+.user-search-btn{
+  position: absolute;
+  right: 10px;
+  font-size: 25px;
+  color: #3c86e7;
+}
+
+
+/*--------------------------------------------------------------------------------
+------------------------------CSS FOR DISPLAYING THE USERSLISTS------------------*/
+.filtered-user{
+  border-bottom: #ccc 1px solid;
+  width: 400px; 
+  padding: 11px 11px;
+  color: #28282B;
+  cursor: pointer;
+  background-color: white;
+}
+
+.filter-user-display{
+  display: flex;
+  flex-wrap: column;
+}
+.filter-user-details{
+  width: 60%;
+}
+.user-display-name{
+  padding: 1px 20px;
+  font-size: 16px;
+  font-weight: bold;
+}
+.user-display-email{
+  padding: 1px 20px;
+  font-size: 12px;
+}
+
+.user-default-profile-pic, .user-profile-image{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color:#4796ff;
+  color: white;
+  font-size: 22px;
+  font-weight: bold;
+  text-align: center;
+  vertical-align: middle;
+  line-height: 50px;
+}
+.user-start-chat{
+  padding: 10px 0px;
+}
+.user-start-chat-btn{
+  padding: 10px 5px;
+  border: none;
+  border-radius: 3px;
+  background-color:#4796ff;
+  color: white;
+  cursor: pointer;
+}
